--- a/stand/i386/Makefile
+++ b/stand/i386/Makefile
@@ -4,11 +4,16 @@ NO_OBJ=t
 
 .include <bsd.init.mk>
 
-SUBDIR.yes=	mbr pmbr boot0 boot0sio btx boot2 cdboot gptboot \
-		isoboot libi386
-SUBDIR.yes+=	pmbr-datadisk
-
+# Almost everything else here relies on btxldr, so we must make sure it's built
+# before everything else proceeds so we don't end up building against a stale
+# btxldr and ending up with a build-during-install scenario.
+SUBDIR.yes+=	btx libi386
 SUBDIR.${MK_LOADER_FIREWIRE}+=	libfirewire
+SUBDIR.yes+=	.WAIT
+
+SUBDIR.yes+=	mbr pmbr boot0 boot0sio boot2 cdboot gptboot \
+		isoboot
+SUBDIR.yes+=	pmbr-datadisk
 
 SUBDIR.${MK_FORTH}+= loader_4th
 SUBDIR.${MK_LOADER_LUA}+= loader_lua
@@ -22,5 +27,7 @@ SUBDIR.yes+=	kgzldr
 .endif
 
 SUBDIR.${MK_LOADER_ZFS}+=	zfsboot gptzfsboot
+
+SUBDIR_DEPEND_pxeldr+=	loader_${LOADER_DEFAULT_INTERP}
 
 .include <bsd.subdir.mk>
